# hyprland-autoname-workspaces

./: .envrc  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  README.md  config.toml.example  flake.nix  hyprland-autoname-workspaces.service  pull_request_template.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  cargo-doc-check.yml  clippy-lint.yml  coverage.yml  publish.yml  release.yml  test.yaml
contrib/: generate_icons.py
src/: main.rs
src/config/: macros.rs  mod.rs
src/params/: mod.rs
src/renamer/: formatter.rs  icon.rs  icons.rs  macros.rs  mod.rs
