[package]
name = "hyprland-autoname-workspaces"
authors = ["Cyril Levis", "Maxim Baz"]
version = "1.1.3"
edition = "2021"
categories = ["gui"]
keywords = ["linux", "desktop-application", "hyprland", "waybar", "wayland"]
description = "This app automatically rename workspaces with icons of started applications."
readme = "README.md"
license = "ISC"
homepage = "https://github.com/hyprland-community/hyprland-autoname-workspaces"
repository = "https://github.com/hyprland-community/hyprland-autoname-workspaces"

[dependencies]
regex = "1"
clap = { version = "4.1.1", features = ["derive"] }
# hyprland = { version = "0.3.6", features = ["silent"] }
hyprland = { git = "https://github.com/cyrinux/hyprland-rs.git", branch="fix/screencast-and-minimize-events-ordering", features = ["silent"] }
signal-hook = "0.3.14"
toml = { version = "0.5.10", features = ["indexmap", "preserve_order"] }
xdg = "2.4.1"
inotify = "0.10.0"
serde = "1.0.152"
strfmt = "0.2.4"
serde_json = "1.0.96"
single-instance = "0.3.3"
semver = "1.0.17"

[features]
dev = ["hyprland/default"]

