[package]
name = "hyprland-autoname-workspaces"
authors = ["Cyril Levis", "Maxim Baz"]
version = "1.1.5"
edition = "2021"
categories = ["gui"]
keywords = ["linux", "desktop-application", "hyprland", "waybar", "wayland"]
description = "This app automatically rename workspaces with icons of started applications."
readme = "README.md"
license = "ISC"
homepage = "https://github.com/hyprland-community/hyprland-autoname-workspaces"
repository = "https://github.com/hyprland-community/hyprland-autoname-workspaces"

[dependencies]
regex = "1"
clap = { version = "4.3.19", features = ["derive"] }
hyprland = { version = "0.3.8", features = ["silent"] }
signal-hook = "0.3.17"
toml = { version = "0.7.6", features = ["indexmap", "preserve_order"] }
xdg = "2.5.2"
inotify = "0.10.2"
serde = "1.0.179"
strfmt = "0.2.4"
serde_json = "1.0.104"
single-instance = "0.3.3"
semver = "1.0.18"

[features]
dev = ["hyprland/default"]

