[package]
name = "hyprland-autoname-workspaces"
authors = ["Cyril Levis", "Maxim Baz"]
version = "1.1.10"
edition = "2021"
categories = ["gui"]
keywords = ["linux", "desktop-application", "hyprland", "waybar", "wayland"]
description = "This app automatically rename workspaces with icons of started applications."
readme = "README.md"
license = "ISC"
homepage = "https://github.com/hyprland-community/hyprland-autoname-workspaces"
repository = "https://github.com/hyprland-community/hyprland-autoname-workspaces"

[dependencies]
regex = "1"
clap = { version = "4.3.19", features = ["derive"] }
hyprland = { version = "0.3.12", features = ["silent"] }
signal-hook = "0.3.17"
toml = { version = "0.7.6", features = ["indexmap", "preserve_order"] }
xdg = "2.5.2"
inotify = "0.10.2"
serde = "1.0.181"
strfmt = "0.2.4"
serde_json = "1.0.104"
single-instance = "0.3.3"
semver = "1.0.18"

[features]
dev = ["hyprland/default"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.71.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]
